<resources>
    <string name="app_name">Interval Timer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="start_button">Start</string>
    <string name="sign_minus">-</string>
    <string name="sign_plus">+</string>
    <string name="rounds">Rounds</string>
    <string name="starting_rounds_main">   10   </string>
    <string name="starting_rounds_timer">10</string>
    <string name="work">Work</string>
    <string name="starting_work">02 : 00</string>
    <string name="rest">Rest</string>
    <string name="starting_rest">00 : 30</string>
    <string name="pause">Pause</string>
    <string name="Continue">Continue</string>
    <string name="btn_end">Hold To End</string>
    <string name="text_motivational_timer">Work It</string>
    <string name="text_paused_timer">Paused</string>
    <string name="about">About</string>
    <string name="about_message">Interval Timer Application created by\nRachel Gutmann and Devora Nagel</string>
    <string name="beep_sound">Beep Sound</string>
    <string name="tick_sound">Tick Sound</string>
</resources>