<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_include_rest">

    <TextView
        android:id="@+id/restText"
        style="@style/styleTextViewTitle"
        android:text="@string/rest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restMinusBtn"
        style="@style/stylePlusMinusButtons"
        android:onClick="decrementRest"
        android:text="@string/sign_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restQuantity"
        app:layout_constraintTop_toBottomOf="@+id/restText" />

    <TextView
        android:id="@+id/restQuantity"
        style="@style/styleTextViewQuantity"
        android:text="@string/starting_rest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restText" />

    <Button
        android:id="@+id/restPlusBtn"
        style="@style/stylePlusMinusButtons"
        android:onClick="incrementRest"
        android:text="@string/sign_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restQuantity"
        app:layout_constraintTop_toBottomOf="@+id/restText" />
</merge>